tests/NormalTests/paczka1/small_fuzzy/96361607.err
Error in line 3: ROyinTR A487 81,6
Error in line 1: NNMVUn0FBN2 A487 58,6
